--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <section class="main__content container">
                 <div class="container">
                     <img class="logo" src="img/Logo.svg" alt="">
-                    <h1 class="main__title">Дизайн Студия</h1>
+                    <h1 class="main__title">Международная школа Дизайна и программирования</h1>
                 </div>
                 <ul class="main__list">
                     <h3 class="main__list-title">Полный пакет чертежей:</h3>
@@ -39,7 +39,7 @@
                 <p class="main__text">Поможем в выборе качественных материалов <br>
                     (декоративные краски, обои, ламинат и т.п.) <br>
                     Превращаем ваши мечты в реальность</p>
-                    <p class="main__text">Цена за кв.м. от 3.000 т</p>
+                    <p class="main__text">Цена за кв.м. от 3.990 ₸</p>
                     <p class="main__text">Обращайтесь по номеру: <br>
                         +7-(701)-578-40-07 <br>
                         +7-(777)-105-35-55</p>
