--- a/kz.html
+++ b/kz.html
@@ -24,7 +24,7 @@
             <section class="main__content container">
                 <div class="container">
                     <img class="logo" src="img/Logo.svg" alt="">
-                    <h1 class="main__title">Дизайн студиясы</h1>
+                    <h1 class="main__title">Халықаралық Дизайн және Бағдарламалау мектебі</h1>
                 </div>
                 <ul class="main__list">
                     <h3 class="main__list-title">Сызбалардың толық пакеті:</h3>
@@ -39,7 +39,7 @@
                 <p class="main__text">Біз сізге сапалы материалдарды таңдауға көмектесеміз <br>
                   (декоративті бояулар, тұсқағаздар, ламинат және т.б.) <br>
                   Біз сіздің армандарыңызды шындыққа айналдырамыз</p>
-                    <p class="main__text">шаршы метр бағасы 3000 т</p>
+                    <p class="main__text">шаршы метр бағасы 3.990 ₸</p>
                     <p class="main__text">Бізбен байланысыңыз: <br>
                         +7-(701)-578-40-07 <br>
                         +7-(777)-105-35-55</p>
